--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,85 @@
 <body>
 {% include "header.html" %}
 <h1>My Recipes</h1>
+<!---->
+<!--Cards-->
+
+<!--Breakfast Card-->
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Breakfast Recipes</h5>
+        <p class="card-text">All your breakfast recipes in one place.</p>
+      <a href="{{ url_for('breakfast_recipes') }}" class="btn btn-warning btn-lg meal_button" id="all_breakfast_recipes_button">
+  Go to Breakfast Recipes!
+</a>
+      </div>
+    </div>
+  </div>
+
+<!--Lunch Card-->
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Lunch Recipes</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="{{ url_for('lunch_recipes') }}" class="btn btn-warning btn-lg meal_button" id="all_lunch_recipes_button">
+  Go to Lunch Recipes!
+</a>
+      </div>
+    </div>
+  </div>
+
+<!--Dinner Card-->
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Dinner Recipes</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <a href="{{ url_for('dinner_recipes') }}" class="btn btn-warning btn-lg meal_button" id="all_dinner_recipes_button">
+  Go to Dinner Recipes!
+</a>
+      </div>
+    </div>
+  </div>
+
+<!--Dessert Cards-->
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Dessert Recipes</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="{{ url_for('dessert_recipes') }}" class="btn btn-warning btn-lg meal_button" id="all_dessert_recipes_button">
+  Go to Dessert Recipes!
+</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!---->
+
+<!--All Recipes Button-->
+
 <div style="display: flex; justify-content: center;">
-<a href="{{ url_for('add_recipe') }}" class="btn btn-warning btn-lg" id="Add_New_Recipe_Button">
+<a href="{{ url_for('all_recipes') }}" class="btn btn-warning btn-lg" id="all_recipes_button">
+  All Recipes
+</a>
+</div>
+
+<!--Add A New Recipe Button-->
+
+<div style="display: flex; justify-content: center;">
+<a href="{{ url_for('add_recipe') }}" class="btn btn-warning btn-lg" id="add_new_recipe_button">
   Add New Recipe
 </a>
 </div>
+
 </body>
 </html>
