Added additional homepage routes

--- a/static/styles.css
+++ b/static/styles.css
@@ -52,6 +52,6 @@ margin-right: 90px;
     background-color:#FCDD9D;
 }
 .meal_button:hover{
-    color: orange;
-    background-color:black;
+    color: white;
+    background-color:#FCDD9D;
 }
