--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,19 @@
     </div>
   </div>
 
+<!--Side dishes Card-->
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Side Dishes</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <a href="{{ url_for('side_dish_recipes') }}" class="btn btn-warning btn-lg meal_button" id="side_dishes">
+  Side Dishes
+</a>
+      </div>
+    </div>
+  </div>
 <!--Dessert Cards-->
   <div class="col">
     <div class="card">
@@ -67,6 +80,63 @@
       </div>
     </div>
   </div>
+
+<!--drinks-->
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Drink Recipes</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="{{ url_for('drink_recipes') }}" class="btn btn-warning btn-lg meal_button" id="all_dessert_recipes_button">
+  Go to Drink Recipes!
+</a>
+      </div>
+    </div>
+  </div>
+
+    <!--baked goods-->
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Breads & Baked Goods</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="{{ url_for('breads_and_baked_goods_recipes') }}" class="btn btn-warning btn-lg meal_button" id="all_dessert_recipes_button">
+  Go to breads & baked goods Recipes!
+</a>
+      </div>
+    </div>
+  </div>
+
+    <!--Soups & Stews-->
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Soups & Stews</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="{{ url_for('soups_and_stews_recipes') }}" class="btn btn-warning btn-lg meal_button" id="all_dessert_recipes_button">
+  Soups & Stews Recipes!
+</a>
+      </div>
+    </div>
+  </div>
+
+        <!--Condiments & Staples -->
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Condiments & Staples</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="{{ url_for('condiments_and_staples') }}" class="btn btn-warning btn-lg meal_button" id="condiments_staples_button">
+  Condiments & Staples!
+</a>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 
