--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -16,5 +16,26 @@
 {% else %}
   <p>No recipes yet!</p>
 {% endfor %}
+
+<table class="all_recipes_table">
+  <tr>
+    <th>Recipe Item</th>
+    <th>Web Link</th>
+    <th>Category</th>
+
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
+
+
 </body>
 </html>
