--- a/static/styles.css
+++ b/static/styles.css
@@ -1,8 +1,7 @@
-/* Header Styles */
+/* -------------------------------------Header Styles----------------------------------*/
 .nav-link{
     color: #F1642E; /* Color of links */
 }
-
 .nav-link:hover {
   background-color: #F1642E; /* Background & text color changes on hover */
   color: #FCDD9D;
@@ -12,8 +11,10 @@ li {
    padding: 0 40px; /* Spacing between links */
 }
 
-
-/* Homepage Styles */
+.header_title{
+    margin-bottom:50px;
+}
+/*------------------------------------ Homepage Styles----------------------------------*/
 body {
   background-color: #FCDD9D;
 }
@@ -21,7 +22,7 @@ h1 {
   text-align: center;
   color: #F1642E;
   margin-top: 25px;
-  margin-bottom: 50px;
+
 }
 #add_new_recipe_button{
     margin-top: 40px;
@@ -35,16 +36,38 @@ h1 {
     margin-top: 40px;
     color: orange;
 }
-/*Homepage Meal Cards*/
 
-/*text in the cards */
-.card-body{
-margin-left: 90px;
+#all_recipes_button{
+    background-color: #F1642E;
+    color: #FFF6E5;
+    margin-bottom: 20px;
 }
 
+/*-------------------------------Individual Category Cards--------------------------------------*/
+/*card styles*/
+
+.all_cards{
+    margin-left: 1.5rem;
+}
 .card{
-margin-left: 90px;
-margin-right: 90px;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-around;
+    align-items: center;
+    text-align:center;
+    background-color: #FFF6E5;
+    color: #F1642E;
+    height:300px;
+    width:400px;
+}
+
+/* Food Icons */
+.food_icon{
+    padding-top: 10px;
+    width: 100px;
+    height: auto;
+    display: block;
+    margin: auto;
 }
 /*card buttons*/
 .meal_button{
@@ -54,4 +77,13 @@ margin-right: 90px;
 .meal_button:hover{
     color: white;
     background-color:#FCDD9D;
+}
+/*------------------------------------Add Recipe Page-----------------------------------------*/
+.new_recipe_form{
+    display: flex;
+    flex_direction: column;
+    justify-content: center;
+    margin-bottom: 100px;
+    color: #F1642E;
+
 }
