--- a/templates/header.html
+++ b/templates/header.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
+
 <!--Bootstrap Header-->
-<div class="container"> <header class="d-flex justify-content-center py-3"> <ul class="nav nav-pills"> <li class="nav-item"><a href={{url_for("home")}} class="nav-link" aria-current="page">Home</a></li> <li class="nav-item"><a href="#" class="nav-link">Planner</a></li> <li class="nav-item"><a href="#" class="nav-link">Register</a></li> <li class="nav-item"><a href="#" class="nav-link">Login</a></li> <li class="nav-item"><a href="#" class="nav-link">Logout</a></li> </ul> </header> </div>
+<div class="container"> <header class="d-flex justify-content-center py-3"> <ul class="nav nav-pills"> <li class="nav-item"><a href={{url_for("home")}} class="nav-link" aria-current="page">My Recipes</a></li> <li class="nav-item"><a href="#" class="nav-link">Planner</a></li> <li class="nav-item"><a href="#" class="nav-link">Register</a></li> <li class="nav-item"><a href="#" class="nav-link">Login</a></li> <li class="nav-item"><a href="#" class="nav-link">Logout</a></li> </ul> </header> </div>
+<h1 class="header_title">Tried & Tasted</h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
