--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
         <h5 class="card-title">Breads & Baked Goods</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <a href="{{ url_for('breads_and_baked_goods_recipes') }}" class="btn btn-warning btn-lg meal_button" id="all_dessert_recipes_button">
-  Go to breads & baked goods Recipes!
+  Open Baked Goods
 </a>
       </div>
     </div>
