--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
       <img src="static/images/mayo.png" class="card-img-top food_icon" alt="...">
       <div class="card-body">
         <h5 class="card-title">Condiments & Staples</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">Sauces and spreads.</p>
             <a href="{{ url_for('condiments_and_staples') }}" class="btn btn-warning btn-lg meal_button" id="condiments_staples_button">
   Condiments & Staples!
 </a>
