--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,14 @@
 <body>
 
 <!--Bootstrap Header-->
-<div class="container"> <header class="d-flex justify-content-center py-3"> <ul class="nav nav-pills"> <li class="nav-item"><a href={{url_for("home")}} class="nav-link" aria-current="page">My Recipes</a></li> <li class="nav-item"><a href="#" class="nav-link">Planner</a></li> <li class="nav-item"><a href="#" class="nav-link">Register</a></li> <li class="nav-item"><a href="#" class="nav-link">Login</a></li> <li class="nav-item"><a href="#" class="nav-link">Logout</a></li> </ul> </header> </div>
+<div class="container"> <header class="d-flex justify-content-center py-3"> <ul class="nav nav-pills"> <li class="nav-item"><a href={{url_for("home")}} class="nav-link" aria-current="page">My Recipes</a></li> <li class="nav-item"><a href="#" class="nav-link">Planner</a></li> <li class="nav-item"><a href="#" class="nav-link">Register</a></li> <li class="nav-item">
+        {% if current_user.is_authenticated %}
+      <li class="nav-item"><a href="{{ url_for('logout') }}" class="nav-link">Logout</a></li>
+    {% else %}
+      <li class="nav-item"><a href="{{ url_for('login') }}" class="nav-link">Login</a></li>
+     </ul></header> </div>
+    {% endif %}
+
 <h1 class="header_title">Tried & Tasted</h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
