--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
 <body>
 
 <!--Bootstrap Header-->
-<div class="container"> <header class="d-flex justify-content-center py-3"> <ul class="nav nav-pills"> <li class="nav-item"><a href={{url_for("home")}} class="nav-link" aria-current="page">My Recipes</a></li> <li class="nav-item"><a href="#" class="nav-link">Planner</a></li> <li class="nav-item"><a href="/register" class="nav-link">Register</a></li> <li class="nav-item">
+<div class="container"> <header class="d-flex justify-content-center py-3"> <ul class="nav nav-pills"> <li class="nav-item"><a href={{url_for("home")}} class="nav-link" aria-current="page">My Recipes</a></li> <li class="nav-item"><a href="/planner" class="nav-link">Planner</a></li> <li class="nav-item"><a href="/register" class="nav-link">Register</a></li> <li class="nav-item">
         {% if current_user.is_authenticated %}
       <li class="nav-item"><a href="{{ url_for('logout') }}" class="nav-link">Logout</a></li>
     {% else %}
