--- a/static/styles.css
+++ b/static/styles.css
@@ -113,7 +113,7 @@ h1 {
 
 .register_login_button{
     background-color: #F1642E;
-    color: black;
+    color: #fff6e5;
     border-radius:5px;
     align: center;
     border: none;
@@ -127,6 +127,29 @@ h1 {
 }
 
 .register_form{
+    color: #F1642E;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff6e5;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 600px;
+    border-radius: 30px;
+    height: 350px;
+    gap: 10px;
+}
+/*------------------------------------Planner Page---------------------------------------------*/
+.planner_page{
+    display: grid;
+    justify-content: center;
+    height: 70vh;
+
+}
+
+
+.planner{
     color: #F1642E;
     display: flex;
     flex-direction: column;
