--- a/templates/planner.html
+++ b/templates/planner.html
@@ -6,5 +6,18 @@
 </head>
 <body>
 {%include "header.html"%}
+<div class="planner_page">
+<div class="planner">
+    <div>Monday:</div>
+    <div>Tuesday:</div>
+    <div>Wednesday:</div>
+    <div>Thursday:</div>
+    <div>Friday:</div>
+    <div>Saturday:</div>
+    <div>Sunday:</div>
+
+
+</div>
+    </div>
 </body>
 </html>
