--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
     <div class="register_form">
         <h2 class="register_form_item">Create an Account</h2><br>
 
-        <form method="post" class="register_form_item">
+        <form method="post" action="{{ url_for('register') }}" class="register_form_item">
             {{ form.hidden_tag() }} <!-- CSRF protection -->
 
             <p>{{ form.email.label }} {{form.email(size=32)}}</p>
