Began breakfast recipes page cards

--- a/templates/breakfast_recipes.html
+++ b/templates/breakfast_recipes.html
@@ -6,6 +6,16 @@
 </head>
 <body>
 {% include "header.html"%}
-breakfast recipes
+<div class="breakfast_card">
+    <div class="breakfast_recipe_name">
+        <img src="static/images/pancakes.png" class ="breakfast_card_image">
+        <h3>Pancakes</h3>
+        <button class="register_login_button">Open Recipe</button>
+    </div>
+    <div class="register_login_button">
+
+    </div>
+
+</div>
 </body>
 </html>
