--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 <div class="row row-cols-1 row-cols-md-3 gx-1 g-4">
   <div class="col">
     <div class="card">
-      <img src="static/images/breakfast.png" class="card-img-top food_icon" alt="...">
+      <img src="static/images/french_toast.jpg" class="card-img-top food_icon" alt="..." id="breakfast_icon">
       <div class="card-body">
         <h5 class="card-title">Breakfast</h5>
         <p class="card-text">Your favorite morning meals, all in one spot.</p>
