--- a/templates/breakfast_recipes.html
+++ b/templates/breakfast_recipes.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 {% include "header.html"%}
+<div class="breakfast_recipes_page">
 <div class="breakfast_card">
     <div class="breakfast_recipe_name">
         <img src="static/images/pancakes.png" class ="breakfast_card_image">
@@ -16,6 +17,7 @@
 
     </div>
 
+</div>
 </div>
 </body>
 </html>
