Inserted dropdown menu for category in add recipe page

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -17,6 +17,11 @@
       {{ form.recipe_name(id="recipe_name") }}<br><br>
     </div>
     <div>
+      <label for="category">{{ form.category.label.text }}</label><br>
+      {{ form.category(id="category") }}<br><br>
+    </div>
+
+    <div>
       <label for="url">{{ form.url.label.text }}</label><br>
       {{ form.url(id="url") }}<br><br>
     </div>
