--- a/static/styles.css
+++ b/static/styles.css
@@ -24,24 +24,38 @@ h1 {
   margin-top: 25px;
 
 }
-#add_new_recipe_button{
-    margin-top: 40px;
+#add_new_recipe_button, #all_recipes_button{
+
     margin-bottom: 40px;
     background-color: #F1642E;
     color: #FCDD9D;
     box-shadow: none;
 
 }
-#add_new_recipe_button:hover{
+#add_new_recipe_button:hover, #all_recipes_button:hover{
     margin-top: 40px;
-    color: orange;
+    color: white;
 }
 
-#all_recipes_button{
-    background-color: #F1642E;
-    color: #FFF6E5;
-    margin-bottom: 20px;
+
+
+
+.homepage_buttons_area {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
 }
+
+
+@media (max-width: 600px) {
+  .homepage_buttons_area {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 
 /*-------------------------------Individual Category Cards--------------------------------------*/
 /*card styles*/
