Removed blue link color from anchor tags

--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
 
     <!-- Submit button -->
     <p class="login_form_item">{{ form.submit(class_="register_login_button") }}</p>
-        <a href="/register">New here? Create an account</a>
+        <a href="/register" style="color: #fb3f00">New here? Create an account</a>
   </form>
 </div>
 </div>
