--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
             <p>{{form.password.label}} {{form.password(size=32)}}</p>
 
             <p class="register_form_item">{{form.submit(class_="register_login_button")}}</p>
-            <a href="/login">Already have an account? Login</a>
+            <a href="/login" style="color: #fb3f00">Already have an account? Login</a>
         </form>
 
     </div>
