--- a/templates/lunch_recipes.html
+++ b/templates/lunch_recipes.html
@@ -5,6 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-Lunch recipes
+{% include "header.html"%}
+
+<div class="breakfast_recipes_page">
+<div class="breakfast_card">
+    <div class="breakfast_recipe_name">
+        <img src="static/images/pancakes.png" class ="breakfast_card_image">
+        <h3>Pancakes</h3>
+        <button class="register_login_button">Open Recipe</button>
+    </div>
+
 </body>
 </html>
